Add Oracle Instant Client installation and configuration scripts for Linux

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
-# .env.example 1=windows   2=linux
-ORACLE_LIB_DIR=
+#se estiver executando o projeto no windows precisa ativar para 1 
+ORACLE_LIB_WIN32=
+ORACLE_LIB_LINUX=
+
 NODE_PORT=
+
+# Oracle client library path - set this to your instant client installation directory
+
+LD_LIBRARY_PATH=/home/oteniel/oracle/instantclient_21_8
+ORACLE_CLIENT_PATH=/home/oteniel/oracle/instantclient_21_8
+
 
 MONGO_CONNECTION=
 MONGO_DATABASE=
-CORS_ORIGIN=
+
+
+CORS_ORIGIN=*
