Refactor code to use ES6 module syntax, update Oracle client paths for user flexibility, and enhance MongoDB connection handling.

--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,15 @@ NODE_PORT=
 
 # Oracle client library path - set this to your instant client installation directory
 
-LD_LIBRARY_PATH=/home/oteniel/oracle/instantclient_21_8
-ORACLE_CLIENT_PATH=/home/oteniel/oracle/instantclient_21_8
+LD_LIBRARY_PATH=/home/$user/oracle/instantclient_21_8
+ORACLE_CLIENT_PATH=/home/$user/oracle/instantclient_21_8
 
 
 MONGO_CONNECTION=
 MONGO_DATABASE=
+
+RAILWAY_MONGO_URL=
+RAILWAY_MONGO_DATABASE=
 
 
 CORS_ORIGIN=*
