--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "stock-services",
   "version": "1.0.0",
   "description": "API de integracao com software TOTVS WINTHOR . ",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
     "start": "npx nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +18,7 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.1",
     "http-errors": "^2.0.0",
-    "knex": "^2.5.1", 
+    "knex": "^2.5.1",
     "mongodb": "^4.12.1",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
