Refactor agenda.js to remove redundant task function, delete unused winthor.js file, and update priceRepository.js for improved price synchronization process

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stock-services",
+  "name": "API Prices Services",
   "version": "1.0.0",
   "description": "API de integracao com software TOTVS WINTHOR . ",
   "main": "app.js",
