Update Oracle client paths to a standardized location and remove unused logger utility

--- a/.env.example
+++ b/.env.example
@@ -6,9 +6,8 @@ NODE_PORT=
 
 # Oracle client library path - set this to your instant client installation directory
 
-LD_LIBRARY_PATH=/home/$user/oracle/instantclient_21_8
-ORACLE_CLIENT_PATH=/home/$user/oracle/instantclient_21_8
-
+LD_LIBRARY_PATH=/opt/oracle/instantclient_21_8
+ORACLE_CLIENT_PATH=/opt/oracle/instantclient_21_8
 
 MONGO_CONNECTION=
 MONGO_DATABASE=
