Refactor: Remove productFilaRepository and scriptCompararPrecos; introduce new SQLite migrations and repositories for produto_preco_new and produto_preco_old
- Deleted productFilaRepository.js and scriptCompararPrecos.js files.
- Added README.md for migration guidelines.
- Created migrations for produto_preco_new and produto_preco_old tables.
- Implemented ProductPrecoNewRepository and ProductPrecoOldRepository for SQLite operations.
- Enhanced ProductPriceFilaTinyRepository with insertIntoQueue method for batch processing.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "telemetry.feedback.enabled": false
+  "telemetry.feedback.enabled": false,
+  "sqltools.connections": [
+    {
+      "previewLimit": 50,
+      "driver": "SQLite",
+      "name": "db_dados",
+      "group": "sqllite",
+      "database": "./dados_erp.db"
+    }
+  ],
+  "sqltools.useNodeRuntime": true
 }
