--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
     "oracledb": "^6.0.3",
+    "sqlite3": "^5.1.7",
     "winston": "^3.8.2"
   }
 }
